--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>pail-graph</groupId>
-  <artifactId>pail-graph</artifactId>
+  <groupId>pail-schema</groupId>
+  <artifactId>pail-schema</artifactId>
   <packaging>jar</packaging>
   <version>0.1.0-SNAPSHOT</version>
-  <name>pail-graph</name>
-  <description>Library for using Graph Schema, Thrift, Pail and Cascalog.</description>
+  <name>pail-schema</name>
+  <description>Library for using Prismatic Schema, Pail and Cascalog.</description>
   <url>http://github.com/EricGebhart/</url>
   <licenses>
     <license>
@@ -14,10 +14,10 @@
     </license>
   </licenses>
   <scm>
-    <connection>scm:git:git://github.com/EricGebhart/pail-graph.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/EricGebhart/pail-graph.git</developerConnection>
-    <tag>189dce79a987e203c52990e68cf97bba71e7428a</tag>
-    <url>https://github.com/EricGebhart/pail-graph</url>
+    <connection>scm:git:git://github.com/EricGebhart/pail-schema.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/EricGebhart/pail-schema.git</developerConnection>
+    <tag>7a7170cda6203f2c50095fb0c86b7a15b2678b01</tag>
+    <url>https://github.com/EricGebhart/pail-schema</url>
   </scm>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -87,19 +87,19 @@
       <version>2.0.0</version>
     </dependency>
     <dependency>
-      <groupId>clj-pail</groupId>
-      <artifactId>clj-pail</artifactId>
-      <version>0.1.3</version>
+      <groupId>clj-pail-tap</groupId>
+      <artifactId>clj-pail-tap</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>clj-thrift</groupId>
-      <artifactId>clj-thrift</artifactId>
+      <groupId>pail-fressian</groupId>
+      <artifactId>pail-fressian</artifactId>
       <version>0.1.1-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>pail-thrift</groupId>
-      <artifactId>pail-thrift</artifactId>
-      <version>0.1.0</version>
+      <groupId>prismatic</groupId>
+      <artifactId>schema</artifactId>
+      <version>0.2.0</version>
     </dependency>
     <dependency>
       <groupId>pail-cascalog</groupId>
