--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>pail-schema</groupId>
   <artifactId>pail-schema</artifactId>
   <packaging>jar</packaging>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.1</version>
   <name>pail-schema</name>
   <description>Library for using Prismatic Schema, Pail and Cascalog.</description>
   <url>http://github.com/EricGebhart/</url>
@@ -16,7 +16,7 @@
   <scm>
     <connection>scm:git:git://github.com/EricGebhart/pail-schema.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/EricGebhart/pail-schema.git</developerConnection>
-    <tag>7a7170cda6203f2c50095fb0c86b7a15b2678b01</tag>
+    <tag>f6beeda50c3a6e13d79850c9af1188e68dd5de01</tag>
     <url>https://github.com/EricGebhart/pail-schema</url>
   </scm>
   <build>
@@ -89,12 +89,12 @@
     <dependency>
       <groupId>clj-pail-tap</groupId>
       <artifactId>clj-pail-tap</artifactId>
-      <version>0.1.0-SNAPSHOT</version>
+      <version>0.1.1</version>
     </dependency>
     <dependency>
       <groupId>pail-fressian</groupId>
       <artifactId>pail-fressian</artifactId>
-      <version>0.1.1-SNAPSHOT</version>
+      <version>0.1.2</version>
     </dependency>
     <dependency>
       <groupId>prismatic</groupId>
